<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/item1_txt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:text="@string/produto_1"
        android:textSize="22sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/item2_txt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:text="@string/produto_2"
        android:textSize="22sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/valor1_txt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginBottom="8dp"
        android:text="@string/valor"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/item1_txt"
        app:layout_constraintVertical_bias="0.1" />

    <EditText
        android:id="@+id/valor1"
        android:layout_width="80dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:gravity="center"
        android:hint="@string/money_sign"
        android:inputType="numberDecimal"
        app:layout_constraintBottom_toBottomOf="@id/valor1_txt"
        app:layout_constraintStart_toEndOf="@+id/quantidade1_txt"
        app:layout_constraintTop_toTopOf="@id/valor1_txt" />

    <TextView
        android:id="@+id/quantidade1_txt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginBottom="8dp"
        android:text="@string/quantidade"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/item1_txt"
        app:layout_constraintVertical_bias="0.25" />

    <EditText
        android:id="@+id/quantidade1"
        android:layout_width="80dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:gravity="center"
        android:hint="@string/zero"
        android:inputType="numberDecimal"
        app:layout_constraintBottom_toBottomOf="@+id/quantidade1_txt"
        app:layout_constraintStart_toEndOf="@+id/quantidade1_txt"
        app:layout_constraintTop_toTopOf="@+id/quantidade1_txt" />

    <EditText
        android:id="@+id/valor2"
        android:layout_width="80dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="8dp"
        android:gravity="center"
        android:hint="@string/money_sign"
        android:inputType="numberDecimal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/item2_txt"
        app:layout_constraintVertical_bias="0.1" />

    <TextView
        android:id="@+id/valor2_txt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:text="@string/valor"
        app:layout_constraintBottom_toBottomOf="@+id/valor2"
        app:layout_constraintEnd_toStartOf="@id/valor2"
        app:layout_constraintTop_toTopOf="@id/valor2" />

    <TextView
        android:id="@+id/quantidade2_txt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:layout_marginBottom="8dp"
        android:text="@string/quantidade"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@id/quantidade2"
        app:layout_constraintTop_toBottomOf="@+id/item1_txt"
        app:layout_constraintVertical_bias="0.25"
        tools:layout_editor_absoluteX="275dp" />

    <EditText
        android:id="@+id/quantidade2"
        android:layout_width="80dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:gravity="center"
        android:hint="@string/zero"
        android:inputType="numberDecimal"
        app:layout_constraintBottom_toBottomOf="@id/quantidade2_txt"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@id/quantidade2_txt" />

    <Button
        android:id="@+id/btn_calcular"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:onClick="onCalcular"
        android:text="@string/calcular"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/quantidade1_txt"
        app:layout_constraintVertical_bias="0.2" />

    <TextView
        android:visibility="invisible"
        android:id="@+id/resultado_txt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:padding="8dp"
        android:text="@string/o_produto_x_e_mais_barato"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/btn_calcular" />

    <TextView
        android:visibility="invisible"
        android:id="@+id/dica_txt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="8dp"
        android:text="@string/apenas_compre_o_produto_x_caso_o_valor_seja_abaixo_de"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/resultado_txt" />


</android.support.constraint.ConstraintLayout>